Mon Aug 15 09:58:55 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_ssl.c: Support disabling OpenSSL compression.
	* test/openssl/test_ssl.rb: Add a test for it.
	  Thanks to Eric Wong for the patch.
	  [Ruby 1.9 - Feature #5183] [ruby-core:38911]

Sun Aug 14 05:57:01 2011  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_socket.rb (test_connect_timeout): added a test
	  based on a patch by Eric Wong.  [ruby-core:38910]

Sat Aug 13 22:17:27 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/mkconfig.rb: do not make the entries related to sitedir and
	  verdordir if disabled by --without options.  [ruby-core:38922]
	  [Bug #5187]

Sat Aug 13 17:03:22 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: [ruby-core:38861]

Sat Aug 13 09:39:07 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/date/test_*.rb: added tests.

Sat Aug 13 09:36:19 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* ext/date/date_parse.c (parse_ddd_cb): fix r32896. RB_GC_GUARD
	  insertion position was mistaken. [ruby-dev:44337] [Bug #5152]

Sat Aug 13 09:26:24 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/core_ext.rb: Make Kernel#y private.
	  [ruby-core:38913]
	* test/psych/test_yaml.rb: corresponding test.

Sat Aug 13 09:05:16 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (date_strftime_alloc): followed the change
	  of r32885.
	* doc/NEWS-1.9.3: followed the above change.

Sat Aug 13 08:55:38 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: Only consider strings
	  with fewer than 2 dots to be numbers. [ruby-core:38915]

Sat Aug 13 08:47:20 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: [ruby-core:38855].

Sat Aug 13 03:41:37 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/uri/common.rb:  Fix documentation of URI::Parser.new.  Patch by
	  Steve Klabnik.  [Ruby 1.9 - Bug #5177]
