@@ -135,15 +135,16 @@ unix_sysaccept(VALUE sock)
 
 #endif
 
-/*
- * Document-class: ::UNIXServer < UNIXSocket
- *
- * UNIXServer represents a UNIX domain stream server socket.
- */
 void
 rsock_init_unixserver(void)
 {
 #ifdef HAVE_SYS_UN_H
+    /*
+     * Document-class: UNIXServer < UNIXSocket
+     *
+     * UNIXServer represents a UNIX domain stream server socket.
+     *
+     */
     rb_cUNIXServer = rb_define_class("UNIXServer", rb_cUNIXSocket);
     rb_define_method(rb_cUNIXServer, "initialize", unix_svr_init, 1);
     rb_define_method(rb_cUNIXServer, "accept", unix_accept, 0);
